--- a/src/app/browse/browse.component.css
+++ b/src/app/browse/browse.component.css
@@ -1,11 +1,25 @@
-.linkFilters {
+.filterLinks {
 	margin: 5px 10px;
 	display: inline-block;
+}
+
+.gameFilters {
+	margin-top: 25px;
+	font-size: 1.5rem;
 }
 
 td {
 	padding: 5px 15px;
 	max-width: 150px;
+}
+
+tr {
+	display: flex;
+	flex-direction: column;
+	max-width: 8rem;
+	margin-bottom: 10px;
+	margin-right: 5px;
+	min-height: 15rem;
 }
 
 th {
@@ -16,8 +30,9 @@ th {
 thead {
 	position: sticky;
 	top: 0;
-	background: black;
-	color: white;
+	background: white;
+	/* background: black;
+	color: white; */
 }
 
 table {
@@ -25,11 +40,23 @@ table {
 	margin-top: 25px;
 }
 
-tbody > tr > td:nth-child(7) {
+/* tbody > tr > td:nth-child(7) {
 	visibility: hidden;
 }
 
 tbody > tr:hover > td:nth-child(7) {
+	visibility: visible;
+} */
+
+.addtoCartBtn {
+	visibility: hidden;
+}
+
+tbody > tr:hover > .addtoCartBtn {
+	visibility: visible;
+}
+
+tbody > tr:active > td > .addtoCartBtn {
 	visibility: visible;
 }
 
@@ -40,3 +67,135 @@ tbody > tr:hover > td:nth-child(7) {
 img {
 	height: 100px;
 }
+
+tr:nth-child(2n+1) > td:not(:last-child) {
+	/* background-color: rgba(242,188,0,0.7); */
+}
+
+.fullGameDetails {
+	display: none;
+}
+
+.limitedGameDetails {
+	display: table-cell;
+}
+
+.triggerGameDetailModal {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.fullGameDetails {
+	display: none;
+}
+
+.modalActivator {
+	display: revert;
+}
+
+.modalContents {
+	display: flex;
+	flex-direction: column;
+	background-color: rgb(255,255,255);
+	width: 75vw;
+	height: 75vh;
+	margin: 5vh auto;
+	text-align: center;
+	font-size: 1.5rem;
+	max-width: 500px;
+	max-height: 550px;
+}
+
+.modalContents img {
+	width: 100%;
+	height: 100%;
+	max-width: 120px;
+	margin: 0 auto 15px;
+	max-height: 120px;
+}
+
+.modalContents button {
+	font-size: 1.5rem;
+	margin: auto auto;
+	
+}
+
+.modalHidden {
+	display: none;
+}
+
+.modalShown {
+	display: block;
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100vw; /* Full width */
+	height: 100vh; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#displayFullGameDetails {
+	position: fixed;
+	top: 5%;
+	left: 5%;
+	background: white;
+	width: 90%;
+	height: 60%;
+	outline: 2px solid black;
+}
+
+tbody {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+tr {
+	display: flex;
+	flex-direction: column;
+	max-width: 120px;
+}
+
+/* .gameDetails {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%; 
+	max-width: 500px;
+} */
+
+.closeModalBtn {
+	color: #aaaaaa;
+	float: right;
+	font-size: 3rem;
+	padding: 10px;
+}
+
+.closeModalBtn:hover {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+@media only screen and (min-width: 931px) {
+	.fullGameDetails {
+		display: revert;
+	}
+	.limitedGameDetails {
+		display: none;
+	}
+	tbody {
+		display: revert;
+	}
+	tr {
+		display: revert;
+	}
+	.modalActivator {
+		display: none;
+	}
+}
+
+*[hidden] { display: none; }
